
2007-11-30  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src: gnome_ui.c, capture.c, app_data.c, 
		app_data.h, gnome_frame.c, gnome_options.c, 
		options.c, gnome-xvidcap.glade: Add
		functionality for following the mouse
		pointer when capturing and hiding 
		the frame.

2007-11-23  dAniel hAhler  <daniel@thequod.de>
	* po/de.po: bugfix for missing echo's

2007-11-20  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src: gnome_ui.c, capture.c, app_data.c, 
		job.c, app_data.h, job.h: make 
		capturing more correct, avoid some
		more potential deadlocks through
		tighter thread synchronization

2007-11-13  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src: gnome_ui.c, capture.c, gnome_frame.c:
		some fixes, improvements, optimizations
		for changing the capture area while
		capturing. You may notice some more 
		delay of repainting the control UI
		while capturing and moving it, but
		your captured video will now be correct.

2007-11-08  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src: frame.h, gnome_ui.c, capture.c, app_data.c, 
		app_data.h, gnome_frame.c, frame.c:
		optimize X11 roundtrips by obtaining
		required X11 info up front and storing
		it in XVC_AppData. Also fix a BadMatch
		with stopping when using XDamage and
		the notification area 

2007-11-07  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src/xtoffmpeg.c: fix ffmpeg multi-threading
		for very small capture areas where
		4 threads would exceed ffmpeg's 
		internal maximum
	* src: xtoffmpeg.c, gnome_ui.c, capture.c, job.c:
		fixes to state changes during capture
		to make sure no external state changes
		can occur while we're reacting on a
		given state
	* src: control.h, xtoffmpeg.c, gnome_ui.c, 
		capture.c, app_data.c, job.c, app_data.h, 
		gnome_frame.c, job.h, main.c: add the 
		mutexes to the XVC_AppData struct to
		avoid their being global and make sure
		movement of the capture area during a
		capture can only take place with the
		right timing so as not to capture the